# wordforge

./: .gitignore  ARCHITECTURE.md  CODEX_BACKLOG.md  CODEX_DATASET_BRIEF.md  DESIGN_BRIEF.md  MULTIMODAL_READING_PLAN.md  README.md  WORKLOG.md  build_app.command  install_listening.command  install_login_item.command  install_studio_login_item.command  pyproject.toml  requirements.txt  run.command  run_app.py  run_native.command  run_studio.command  setup.command  setup_app.py  uninstall_login_item.command  uninstall_studio_login_item.command
data/: lexicon 2.jsonl  lexicon.jsonl  reviews.jsonl
data/corpus/: README.md  passages.jsonl  reading_paths.json
data/reading_packages/: emerson_self_reliance.jsonl  emerson_self_reliance_full.jsonl
data/wordlists/: library_awl.txt  library_literary.txt  library_seed.txt
native/: WordForge.swift  build_native.command
scripts/: bake_current_lesson_package.py  bake_emerson_reading_packages.py  bake_local_lesson_batch.py  bake_reading_audio.py  bake_self_reliance_full.py  build_corpus.py  build_library.py  build_seed.py  deepgram_speak.py  ocr_edge_pages.py  prebake_drill_scaffolds.py  set_deepgram_key.py
wordforge/: __init__.py  app.py  cli.py  config.py  corpus.py  deepgram_tts.py  drill_scaffold.py  drills.py  express.py  grounding.py  listening.py  reader.py  reading_packages.py  scheduler.py  store.py  studio.py  studio_page.html  translate.py  translate_history.py  translate_terminal.py  window.py  writing.py
wordforge/data/: seed_words.jsonl
